--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://yash-agr-451:yashagarwal@student-management.pavkwtr.mongodb.net/student-management
 spring.data.mongodb.database=student-management
+spring.main.allow-bean-defination-overriding=true
